--- a/css3图片.html
+++ b/css3图片.html
@@ -32,6 +32,11 @@
 			z-index: 1;
 			box-shadow:5px 0 2px rgba(100, 0, 0, .6);
 			 -webkit-transform:scale(1.2) rotate(0deg);
+			-webkit-transform:scale(1.2) rotate(0deg);
+			-moz-transform:scale(1.2) rotate(0deg);
+			-ms-transform:scale(1.2) rotate(0deg);
+			-o-transform:scale(1.2) rotate(0deg);
+			transform:scale(1.2) rotate(0deg);
 		}
 		/*#continer :hover{
 			box-shadow:5px 0 2px rgba(255, 0, 0, .6);
